--- a/fleet/prometheus/fleet.yaml
+++ b/fleet/prometheus/fleet.yaml
@@ -1,7 +1,7 @@
 defaultNamespace: monitoring
 
 helm:
-  chart: prometheus-community/prometheus
+  chart: prometheus
   repo: https://prometheus-community.github.io/helm-charts
   version: 25.26.0
   releaseName: prometheus
